Changes for Dashboard and Projects screen

--- a/src/components/TopBar/style.scss
+++ b/src/components/TopBar/style.scss
@@ -3,7 +3,7 @@
 .top-bar {
   width: 98%;
   height: 60px;
-  background-color: $primary;
+  background-color: $primary-blue;
   color: $text;
   display: flex;
   align-items: center;
