--- a/src/pages/Analytics/style.scss
+++ b/src/pages/Analytics/style.scss
@@ -9,11 +9,11 @@
   h1 {
     font-size: 24px;
     font-weight: 600;
-    color: $secondary-dark;
+    color: $secondary-purple;
   }
 
   p {
     font-size: 16px;
-    color: $text-light;
+    color: $text;
   }
 }
