--- a/src/pages/Calendar/style.scss
+++ b/src/pages/Calendar/style.scss
@@ -3,7 +3,7 @@
 
 .calendar {
   padding: 16px;
-  background-color: $background-light;
+  background-color: $background;
   color: $text;
 
   h1 {
@@ -14,6 +14,6 @@
 
   p {
     font-size: 16px;
-    color: $text-light;
+    color: $text;
   }
 }
