--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,16 @@
 
   .layout {
     display: flex;
-    height: calc(100vh - 60px); // Adjust height to exclude the TopBar
     width: 100%;
+    height: 100vh;
 
     .main-content {
       background-color: $background;
       position: relative;
-      top: 60px;
       left: 163px;
-      width: 70vw;
-      height: 100vh;
+      width: calc(100vw - 163px); // Adjust width to stay within window limits
+      height: 100%;
+      overflow: auto; // Add overflow property to prevent horizontal scroll
     }
   }
 }
