--- a/src/components/LeftSidebar/style.scss
+++ b/src/components/LeftSidebar/style.scss
@@ -1,31 +1,54 @@
 @import '../../styles/colors.scss';
 
 .sidebar {
-  width: 126px;
-  height: calc(100vh - 95px); // Height below the TopBar
-  background-color: $background-light; // White background
+  width: 162px;
+  height: 100vh;
+  background-color: $primary-blue; // White background
   position: fixed;
   left: 0;
-  top: 60px; // Starts below the TopBar
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  padding: 16px;
-  border-right: 1px solid $background-dark; // Right border
   box-shadow: 2px 0px 8px rgba(0, 0, 0, 0.1); // Subtle shadow for separation
+  
+  .streamwise-logo{
+    padding: 32px 12px;
+    font-weight: 700;
+    color: $white;
+    font-size: 22px;
+    border-bottom: 1px solid $border-color;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    img {
+      height: 60px;
+      width: 76px;
+      margin-bottom: 24px;
+      margin-right: 4px;
+    }
+
+    span {
+      display: inline-block;
+      font-family: monospace;
+    }
+  }
   nav{
     display: flex;
     flex-direction: column;
   }
 
   .nav-item {
-    margin-bottom: 16px;
-    color: $text;
+    color: white;
+    font-weight: 600;
     text-decoration: none;
-
+    padding: 32px 16px;
+    border-bottom: 1px solid $border-color;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
     &:hover {
-      color: $secondary;
+      color: $hover-text;
+      background-color: $hover-bg;
     }
 
     &.div-selected {
