--- a/src/components/RightSidebar/style.scss
+++ b/src/components/RightSidebar/style.scss
@@ -2,22 +2,24 @@
 
 .right-sidebar {
   width: 300px;
-  height: calc(100vh - 95px); // Height below the TopBar
-  background-color: $background-light; // White background
+  height: 100vh;
+  background-color: $background; // White background
   position: fixed;
   right: 0;
-  top: 60px; // Starts below the TopBar
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  padding: 16px;
-  border-left: 1px solid $background-dark; // Left border
   box-shadow: -2px 0px 8px rgba(0, 0, 0, 0.1); // Subtle shadow for separation
 
   .chat-header {
-    font-weight: 600;
-    margin-bottom: 16px;
-    color: $text;
+    span{
+      font-size: 18px;
+      font-weight: 600;
+      color: $secondary-purple;
+    }
+    border-bottom: 1px solid $border-color;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
+    padding: 16px;
   }
 
   .chat-body {
@@ -28,22 +30,70 @@
 
   .chat-footer {
     display: flex;
-    input {
-      flex: 1;
-      padding: 12px;
-      border: 1px solid $background-dark;
-      border-radius: 4px;
-      margin-right: 8px;
+    flex-direction: column;
+    position: relative;
+    .prompt-suggestions {
+      display: flex;
+      flex-direction: column; 
+      align-items: center;
+      padding: 0px 16px 0px 16px;
+      border-top: 1px solid $border-color;
+      border-bottom: 1px solid $border-color;
+      span{
+        font-size: 12px;
+        margin: 16px 0px;
+        font-weight: 600;
+        color: $primary-blue;
+        text-align: center;
+      }
+      div {
+        width: 80%;
+        font-size: 12px;
+        color: $primary-dark;
+        font-weight: 600;
+        padding: 8px;
+        border: 1px solid $border-color;
+        border-radius: 4px;
+        margin-bottom: 8px;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+        &:hover {
+          background-color: #d0dbf2;
+        }
+      }
     }
-    button {
-      padding: 12px 16px;
-      background-color: $primary;
-      color: $text;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      &:hover {
-        background-color: $primary-dark;
+    .prompt-input {
+      display: flex;
+      position: relative;
+      margin: 16px;
+      textarea {
+        flex: 1;
+        padding: 12px;
+        border-radius: 4px;
+        height: 70px;
+      }
+      button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 9px;
+        width: 30px;
+        background-color: $secondary-purple;
+        color: $white;
+        border: none;
+        border-radius: 50%;
+        height: 30px;
+        position: absolute;
+        right: 7px;
+        top: 60px;
+        img{
+          height: 20px;
+          width: 30px
+        }
+        cursor: pointer;
+        &:hover {
+          background-color: $button-hover;
+        }
       }
     }
   }
