--- a/src/pages/Dashboard/style.scss
+++ b/src/pages/Dashboard/style.scss
@@ -1,19 +1,54 @@
 @import '../../styles/colors.scss';
 @import '../../styles/base.scss';
 
-.dashboard {
-  padding: 16px;
-  background-color: $background;
-  color: $text;
-
-  h1 {
-    font-size: 24px;
-    font-weight: 600;
-    color: $primary-dark;
-  }
-
-  p {
-    font-size: 16px;
-    color: $text-light;
+.dashboard-container{
+  display: flex;
+  height: 100%; // Set height to viewport height
+  overflow: hidden; // Hide vertical scroll
+  .dashboard {
+    background-color: $background;
+    color: $text;
+    width: calc(100% - 300px);
+    height: 100%; // Set height to viewport height
+    display: flex;
+    flex-direction: column;
+    &.empty-dashboard{
+      width: 100%;
+    } 
+    .dashboard-title {
+      font-size: 18px;
+      font-weight: 600;
+      color: $secondary-purple;
+      border-bottom: 1px solid $border-color;
+      box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
+      padding: 16px;
+    }
+    .whiteboard-container{
+      padding: 16px 18px 0px 16px;
+    }
+    .no-project-placeholder {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 16px;
+      border: 1px solid $border-color;
+      border-radius: 8px;
+      flex-grow: 1;
+      img {
+        height: 300px;
+        margin-bottom: 32px;
+      }
+      span {
+        font-size: 24px;
+        font-weight: 600;
+        color: $primary-dark;// Let the container take remaining height of screen
+      }
+      .projects-cta-btn{
+        margin: 32px;
+        padding: 16px;
+        font-weight: 600;
+      } 
+    }
   }
 }
