--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,7 +2,7 @@
 @import './colors.scss';
 
 body {
-  font-family: 'Clear Sans', sans-serif;
+  font-family: "Roboto Flex", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -110,22 +110,22 @@ body {
 
 // Border Utilities
 .border {
-  border: 1px solid $primary;
+  border: 1px solid $primary-blue;
 
   &--top {
-    border-top: 1px solid $primary;
+    border-top: 1px solid $primary-blue;
   }
 
   &--bottom {
-    border-bottom: 1px solid $primary;
+    border-bottom: 1px solid $primary-blue;
   }
 
   &--left {
-    border-left: 1px solid $primary;
+    border-left: 1px solid $primary-blue;
   }
 
   &--right {
-    border-right: 1px solid $primary;
+    border-right: 1px solid $primary-blue;
   }
 }
 
@@ -153,14 +153,23 @@ body {
 .div-hover {
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     &:hover {
-      background-color: lighten($primary, 10%);
+      background-color: lighten($primary-blue, 10%);
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     }
   }
   
-  // Selected States
-  .div-selected {
-    background-color: darken($primary, 10%);
-    border: 2px solid $primary-dark;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 9px;
+    background-color: $button-background;
+    color: $white;
+    border: none;
+    border-radius: 8px;
+    height: 30px;
+    cursor: pointer;
+    &:hover {
+      background-color: $button-hover;
+    }
   }
