--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,36 +1,26 @@
 // Primary Color Palette
-$primary: #C6E7FF;
-$secondary: #D4F6FF;
-$background: #FBFBFB;
-$highlight: #FFDDAE;
+$primary-blue: #3749A6; // Deep Dark Blue
+$secondary-purple: #5030E5; // Greyish Dark Blue
+$background: #FFFFFF; // White background (default)
+$highlight: #2F2F2F; // Slightly Lighter Grey-Black
+$white: #ffffff;
+
+$whiteboard-grey-dots: #d4d4d4;
 
 // Adjacent Colors
-$primary-dark: #A8D4F0;
-$primary-light: #E3F4FF;
+$primary-dark: #162D4C; // Darker Blue
 
-$secondary-dark: #B9E7F0;
-$secondary-light: #E8FCFF;
-
-$highlight-dark: #FFC291;
-$highlight-light: #FFE8C4;
-
-$background-dark: #EDEDED;
-$background-light: #FFFFFF;
+$highlight-dark: #1A1A1A; // Almost Black
+$highlight-light: #3A3A3A; // Lighter Grey-Black
 
 // Text Colors
-$text: #333333;
-$text-light: #666666;
+$text: #2D2D2D; // Dark Black
+// Hover States
+$hover-bg: #f7f6f2; // Background on hover
+$hover-text: $primary-dark; // Text color on hover
 
-// Button & CTA Colors
-$btn-primary-bg: $primary;
-$btn-primary-hover: $primary-dark;
-$btn-secondary-bg: $highlight;
-$btn-secondary-hover: $highlight-dark;
+$button-background: #4880FF;
+$button-color: #FFFFFF;
+$button-hover: #366ceb;
 
-// Exported Colors
-:root {
-  --primary: #C6E7FF;
-  --secondary: #D4F6FF;
-  --background: #FBFBFB;
-  --highlight: #FFDDAE;
-}
+$border-color: #E0E0E0;
